<resources>
    <string name="nonMember">비회원으로 시작하기</string>
    <string name="signUpFull">5초만에 회원가입</string>
    <string name="signUp">회원가입</string>
    <string name="login">로그인</string>
    <string name="rememberEmail">아이디 저장</string>
    <string name="signing">로그인 중</string>
    <string name="signInRegexError">이메일 또는 비밀번호 형식이 잘못되었습니다.</string>
    <string name="signInSuccess">로그인 성공</string>
    <string name="signInFailed">로그인 실패</string>
    <string name="signOutSuccess">로그아웃 되었습니다</string>
    <string name="signUpFailed">회원가입 실패</string>
    <string name="signUpSuccess">회원가입 성공</string>
    <string name="signingUp">회원가입 처리 중</string>
    <string name="signUpPasswordError">비밀번호가 일치하지 않습니다</string>
    <string name="emailVerification">이메일 인증</string>
    <string name="verificationCode">인증 코드</string>
    <string name="verificationCodeHint">코드를 입력하세요</string>
    <string name="complete">완료</string>
    <string name="verificationCodeDescription">로그인 하려면 이메일 인증이 필요합니다</string>
    <string name="sendedVerificationCode">다음 이메일로 인증 코드가 전송되었습니다</string>
    <string name="verificationCodeError">인증 실패</string>
    <string name="confirmedVerificationCode">인증 완료</string>
    <string name="signUpUserExists">이미 사용중인 이메일입니다</string>
</resources>
